// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor /> should match snapshot with label, icon and to props 1`] = `
<a
  class="Anchor_root__um22v0 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_link__1xnpmd7e reset_cursorPointer__1oah0221 reset_a__1oah0229 useBoxStyles_display_inline__3xgq1lfx"
  href="https://www.autoguru.com.au"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgr useBoxStyles_flexWrap_wrap__3xgq1lha useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxw4 useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm24"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_flex__3xgq1lfu useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgr useBoxStyles_flexWrap_nowrap__3xgq1lhb"
    >
      <i
        class="useBoxStyles_display_block__3xgq1lft Icon_makeResponsiveStyle_key_bp__1gy3ire0 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_link__1xnpmd7e"
        role="presentation"
      >
        <svg
          class="useBoxStyles_display_block__3xgq1lft useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_flex__3xgq1lfu useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgr useBoxStyles_flexWrap_nowrap__3xgq1lhb"
    >
      <span
        class="reset_inlineText__1oah0222 useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_sizes_4__1xnpmd74"
      >
        Hello World!
      </span>
    </div>
  </div>
</a>
`;

exports[`<Anchor /> should match snapshot without label 1`] = `
<a
  class="Anchor_root__um22v0 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_link__1xnpmd7e reset_cursorPointer__1oah0221 reset_a__1oah0229 useBoxStyles_display_inline__3xgq1lfx"
>
  <span
    class="reset_inlineText__1oah0222 useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_sizes_4__1xnpmd74"
  />
</a>
`;

exports[`<Anchor /> when custom component should match snapshot with label, icon custom component 1`] = `
<button
  class="reset_appearance__1oah0220 reset_cursorPointer__1oah0221 reset_trimmedBlockElement__1oah0225 reset_button__1oah0226 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3o useBoxStyles_display_inlineBlock__3xgq1lfy useBoxStyles_overflow_hidden__3xgq1lfo useBoxStyles_textAlign_center__3xgq1lfm useBoxStyles_border_style__3xgq1l9k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lb9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lbp useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lc5 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 Button_root__p2yon50 Button_defaultStates_secondary__p2yon5m Button_variant_secondary__p2yon5f Button_size_medium_default__p2yon5a Button_enabled__p2yon54 Anchor_root__um22v0 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_link__1xnpmd7e reset_block__1oah0223 useBoxStyles_display_inline__3xgq1lfx"
  type="button"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_height_full__3xgq1lfh useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhg Button_body__p2yon51"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgr useBoxStyles_flexWrap_wrap__3xgq1lha useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxw4 useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm24"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_flex__3xgq1lfu useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgr useBoxStyles_flexWrap_nowrap__3xgq1lhb"
      >
        <i
          class="useBoxStyles_display_block__3xgq1lft Icon_makeResponsiveStyle_key_bp__1gy3ire0 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_link__1xnpmd7e"
          role="presentation"
        >
          <svg
            class="useBoxStyles_display_block__3xgq1lft useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </i>
      </div>
      <div
        class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_flex__3xgq1lfu useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgr useBoxStyles_flexWrap_nowrap__3xgq1lhb"
      >
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_sizes_4__1xnpmd74"
        >
          Hello World!
        </span>
      </div>
    </div>
  </div>
</button>
`;
